# CppTemplates

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/: Attribute.h  GenericPointSet.h  example.h  generic_point_set.h
src/: GenericPointSet.cpp  example.cpp  generic_point_set.cpp  main.cpp
test/: GenericPointSet.cpp  generic_point_set_tests.cpp  test_example.cpp
